Anki Add CLI: logging, module imports, and aligning defs to the top of viewport

--- a/anki-add-cli/requirements.txt
+++ b/anki-add-cli/requirements.txt
@@ -1,12 +1,49 @@
+anyio
+asttokens
 autopage
+backcall
 beautifulsoup4
 bs4
+certifi
 click
+comm
+debugpy
+decorator
+executing
+h11
+httpcore
+httpx
+idna
+ipykernel
+ipython
 iso-639
+jedi
 joblib
+jupyter_client
+jupyter_core
+matplotlib-inline
+nest-asyncio
 nltk
+packaging
+parso
+pexpect
+pickleshare
+platformdirs
+prompt-toolkit
+psutil
+ptyprocess
+pure-eval
+Pygments
+python-dateutil
+pyzmq
 readchar
 regex
+six
+sniffio
 soupsieve
+stack-data
+tornado
 tqdm
+traitlets
 Unidecode
+wcwidth
