anki-add-cli : Update the decks screen to show all counts (empty,new,learning,reviewing) per deck
When doing a review, the 'learning' cards are first, followed by 'reviewing'.
If those are both empty, then it returns 'new' cards.

The deck screen also does a sync() now too.

Duplicate empty cards are now allowed, and it'll just find the duplicate and display it first.

The caching still needs some work, as the decks screen is now noticeably slow(er).

Update color names to be consistent with colors.sh

Google search now copies to clipboard automatically

--- a/anki-add-cli/requirements.txt
+++ b/anki-add-cli/requirements.txt
@@ -1,49 +1,8 @@
-anyio
-asttokens
-autopage
-backcall
-beautifulsoup4
-bs4
-certifi
-click
-comm
-debugpy
-decorator
-executing
-h11
-httpcore
-httpx
-idna
-ipykernel
-ipython
-iso-639
-jedi
-joblib
-jupyter_client
-jupyter_core
-matplotlib-inline
-nest-asyncio
-nltk
-packaging
-parso
-pexpect
-pickleshare
-platformdirs
-prompt-toolkit
-psutil
-ptyprocess
-pure-eval
-Pygments
-python-dateutil
-pyzmq
-readchar
-regex
-six
-sniffio
-soupsieve
-stack-data
-tornado
-tqdm
-traitlets
-Unidecode
-wcwidth
+autopage==0.5.1
+beautifulsoup4==4.12.2
+iso_639==0.4.5
+nltk==3.8.1
+pyperclip==1.8.2
+readchar==4.0.5
+regex==2023.6.3
+Unidecode==1.3.6
