--- a/anki-add-cli/requirements.txt
+++ b/anki-add-cli/requirements.txt
@@ -1,8 +1,9 @@
-autopage==0.5.1
-beautifulsoup4==4.12.2
+addict==2.4.0
+autopage==0.5.2
+beautifulsoup4==4.12.3
 iso_639==0.4.5
 nltk==3.8.1
 pyperclip==1.8.2
 readchar==4.0.5
-regex==2023.6.3
-Unidecode==1.3.6
+regex==2023.10.3
+Unidecode==1.3.7
